[project]
name = "pubmed_fetcher_FathimathSahala"
version = "0.1.0"
description = "A tool to fetch PubMed research papers with non-academic authors."
authors = [
    {name = "Fathimath_Sahala",email = "sahalazakariya18@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"


[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher_FathimathSahala.cli:main"


